--- a/Court.xaml
+++ b/Court.xaml
@@ -1,15 +1,15 @@
-﻿<Window x:Class="STI_ONN.Building"
+﻿<Window x:Class="STI_ONN.Court"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:STI_ONN"
         mc:Ignorable="d"
-        Title="Building" 
-        Height="auto" 
-        Width="auto"
-        WindowState="Maximized"
-        WindowStyle="None">
+        Title="Court"
+    Height="auto" 
+    Width="auto"
+    WindowState="Maximized"
+    WindowStyle="None">
 
     <Viewbox StretchDirection="Both">
         <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Height="1080" Width="1920">
@@ -22,10 +22,10 @@
                 <!-- menubar -->
                 <TextBlock Text="Floors" Margin="152,381,152,644" FontWeight="Bold" FontSize="40"/>
                 <Line
-                    X1="0" Y1="10"
-                    X2="400" Y2="10"
-                    Stroke="Black"
-                    StrokeThickness="1" Margin="20,367,10,675" RenderTransformOrigin="0.5,0.5" >
+                X1="0" Y1="10"
+                X2="400" Y2="10"
+                Stroke="Black"
+                StrokeThickness="1" Margin="20,367,10,675" RenderTransformOrigin="0.5,0.5" >
                     <Line.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform/>
@@ -68,7 +68,7 @@
                     <MenuItem Margin="-1,79,1,-141" FontSize="40" FontWeight="Bold" Click="announcement_btn">
                         <MenuItem.Header>
                             <Grid>
-                                <TextBlock Text="Announcement" Margin="85,0,0,0" FontFamily="Leelawadee" HorizontalAlignment="Left" Width="288"/>
+                                <TextBlock Text="Announcement" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
                             </Grid>
                         </MenuItem.Header>
 
@@ -79,16 +79,16 @@
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Margin="-1,237,1,-299" FontSize="40" FontWeight="Bold" Background="#FF0B5793">
+                    <MenuItem Margin="-1,237,1,-299" FontSize="40" FontWeight="Bold" Click="ground_btn">
                         <MenuItem.Header>
                             <Grid>
-                                <TextBlock Text="Ground" Margin="85,0,-86,0" Foreground="White" FontFamily="Leelawadee"/>
+                                <TextBlock Text="Ground" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
                             </Grid>
                         </MenuItem.Header>
 
                         <MenuItem.Icon>
 
-                            <Image Source="/assets/Icons/ground-white.png" Margin="45,-19,-81,-17" />
+                            <Image Source="/assets/Icons/ground.png" Margin="45,-19,-81,-17" />
 
                         </MenuItem.Icon>
                     </MenuItem>
@@ -163,20 +163,19 @@
                         </MenuItem.Icon>
                     </MenuItem>
                     
-                    <MenuItem Margin="0,716,0,-778" FontSize="40" FontWeight="Bold" Click="court_btn">
+                    <MenuItem Margin="1,716,-1,-778" FontSize="40" FontWeight="Bold" Background="#FF0B5793">
                         <MenuItem.Header>
                             <Grid>
-                                <TextBlock Text="Court" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
+                                <TextBlock Text="Court" Margin="85,0,-86,0" Foreground="White" FontFamily="Leelawadee"/>
                             </Grid>
                         </MenuItem.Header>
 
                         <MenuItem.Icon>
 
-                            <Image Source="/assets/Icons/Court.png" Margin="45,-15,-81,-15" />
+                            <Image Source="/assets/Icons/court-white.png" Margin="45,-14,-81,-15" />
 
                         </MenuItem.Icon>
                     </MenuItem>
-
                 </Menu>
             </Grid>
 
@@ -185,14 +184,14 @@
             <Grid Margin="492,0,0,0">
                 <Image x:Name="mapImage" Stretch="Uniform" Margin="-64,0,0,0"/>
 
-                <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Margin="-58,154,0,0">
+                <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Margin="-59,154,0,0">
                     <Canvas Name="canvas" Background="White" Height="900" VerticalAlignment="Bottom">
-                        <Image Height="844" Source="/assets/Maps/01GroundFloor.png" Width="1469" Canvas.Top="25"
-                               Name="image"
-                               MouseWheel="Image_MouseWheel"
-                               MouseLeftButtonDown="Image_MouseLeftButtonDown"
-                               MouseLeftButtonUp="Image_MouseLeftButtonUp"
-                               MouseMove="Image_MouseMove" Canvas.Left="14" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+                        <Image Height="844" Source="/assets/Maps/07Court.png" Width="1469" Canvas.Top="25"
+                           Name="image"
+                           MouseWheel="Image_MouseWheel"
+                           MouseLeftButtonDown="Image_MouseLeftButtonDown"
+                           MouseLeftButtonUp="Image_MouseLeftButtonUp"
+                           MouseMove="Image_MouseMove" Canvas.Left="14" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
                             <Image.RenderTransform>
                                 <TransformGroup>
                                     <ScaleTransform/>
@@ -202,21 +201,11 @@
                                 </TransformGroup>
                             </Image.RenderTransform>
                         </Image>
-                        <Rectangle Name="clickableSection"
-                        MouseDown="ClickableSection_Click" Canvas.Left="543" Canvas.Top="321" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="125" Width="142" Fill="Transparent">
-                            <Rectangle.RenderTransform>
-                                <TransformGroup>
-                                    <ScaleTransform ScaleX="1.019"/>
-                                    <SkewTransform AngleX="-25" AngleY="12.682"/>
-                                    <RotateTransform Angle="-12.719"/>
-                                    <TranslateTransform X="1.277" Y="-6.034"/>
-                                </TransformGroup>
-                            </Rectangle.RenderTransform>
-                        </Rectangle>
                     </Canvas>
                 </ScrollViewer>
 
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="1057,936,0,0" Height="114" Width="305">
+
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="1057,936,0,0" Height="116" Width="305">
                     <Button Click="ZoomResetButton_Click" Margin="5" Background="White" BorderBrush="White" Height="84" Width="89">
                         <Button.Resources>
                             <Style TargetType="{x:Type Border}">
