--- a/Mezzanine.xaml
+++ b/Mezzanine.xaml
@@ -162,6 +162,19 @@
 
                         </MenuItem.Icon>
                     </MenuItem>
+                    <MenuItem Margin="0,716,0,-778" FontSize="40" FontWeight="Bold" Click="court_btn">
+                        <MenuItem.Header>
+                            <Grid>
+                                <TextBlock Text="Court" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
+                            </Grid>
+                        </MenuItem.Header>
+
+                        <MenuItem.Icon>
+
+                            <Image Source="/assets/Icons/Court.png" Margin="45,-15,-81,-15" />
+
+                        </MenuItem.Icon>
+                    </MenuItem>
                 </Menu>
             </Grid>
 
@@ -171,7 +184,7 @@
 
                 <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Margin="-58,154,0,0">
                     <Canvas Name="canvas" Background="White" Height="900" VerticalAlignment="Bottom">
-                        <Image Height="844" Source="/assets/Maps/Mezzanine.png" Width="1469" Canvas.Top="25"
+                        <Image Height="844" Source="/assets/Maps/02MezzanineFloor.png" Width="1469" Canvas.Top="25"
                            Name="image"
                            MouseWheel="Image_MouseWheel"
                            MouseLeftButtonDown="Image_MouseLeftButtonDown"
