--- a/Home.xaml
+++ b/Home.xaml
@@ -23,42 +23,79 @@
                 </Button.Resources>
                 <Image Source="/assets/Icons/back.png" Stretch="Fill" Height="42" Width="30"/>
             </Button>
-            <Rectangle HorizontalAlignment="Left" Height="684" Margin="168,271,0,0" Stroke="#FFE4E4E4" VerticalAlignment="Top" Width="752" Opacity="1" RadiusX="50" RadiusY="50" Fill="White"/>
-            <Rectangle HorizontalAlignment="Left" Height="678" Margin="1027,277,0,0" Stroke="#FFE4E4E4" VerticalAlignment="Top" Width="736" Opacity="1" RadiusX="50" RadiusY="50" Fill="White"/>
-            <Button Margin="1054,281,169,0" VerticalAlignment="Top" Height="668" FontSize="55" Background="{x:Null}" RenderTransformOrigin="0.5,0.5" Click="Button_Click2" Foreground="Black" BorderBrush="{x:Null}">
-                <Button.Resources>
-                    <Style TargetType="{x:Type Border}">
-                        <Setter Property="CornerRadius" Value="50"/>
-                    </Style>
-                </Button.Resources>
-                <Button.RenderTransform>
-                    <TransformGroup>
-                        <ScaleTransform/>
-                        <SkewTransform AngleY="0.029"/>
-                        <RotateTransform Angle="0.092"/>
-                        <TranslateTransform/>
-                    </TransformGroup>
-                </Button.RenderTransform>
-                <Image Source="/assets/Icons/announcement.png" Stretch="Fill" RenderTransformOrigin="0.23,0.141" Height="512" Width="512"/>
-            </Button>
-            <Label Content="Check Announcement" HorizontalAlignment="Left" Margin="1121,859,0,0" VerticalAlignment="Top" Height="108" Width="586" FontSize="55" FontFamily="Leelawadee" FontWeight="Bold"/>
-            <Button Margin="180,269,1012,0" VerticalAlignment="Top" Height="680" FontSize="55" Background="{x:Null}" RenderTransformOrigin="0.5,0.5" Click="Button_Click" Foreground="Black" BorderBrush="{x:Null}">
-                <Button.Resources>
-                    <Style TargetType="{x:Type Border}">
-                        <Setter Property="CornerRadius" Value="50"/>
-                    </Style>
-                </Button.Resources>
-                <Button.RenderTransform>
-                    <TransformGroup>
-                        <ScaleTransform/>
-                        <SkewTransform AngleY="0.026"/>
-                        <RotateTransform Angle="0.093"/>
-                        <TranslateTransform/>
-                    </TransformGroup>
-                </Button.RenderTransform>
-                <Image Source="/assets/Icons/building.png" Stretch="Fill" Height="450" Width="450"/>
-            </Button>
-            <Label Content="Navigate Building" HorizontalAlignment="Left" Margin="312,859,0,0" VerticalAlignment="Top" Height="108" Width="488" FontSize="55" FontFamily="Leelawadee" FontWeight="Bold"/>
+
+            <!-- Use a Grid to distribute the buttons evenly -->
+            <Grid Margin="0,250,0,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <!-- First button -->
+                    <ColumnDefinition Width="1*"/>
+                    <!-- Second button -->
+                    <ColumnDefinition Width="1*"/>
+                    <!-- Third button -->
+                </Grid.ColumnDefinitions>
+
+                <!-- Navigate Building Button with White Background -->
+                <Rectangle Grid.Column="0" HorizontalAlignment="Center" Height="680" Stroke="#FFE4E4E4" VerticalAlignment="Top" Width="600" RadiusX="50" RadiusY="50" Fill="White"/>
+                <Button Grid.Column="0" VerticalAlignment="Top" Height="680" FontSize="55" Background="{x:Null}" RenderTransformOrigin="0.5,0.5" Click="Button_Click" Foreground="Black" BorderBrush="{x:Null}">
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="50"/>
+                        </Style>
+                    </Button.Resources>
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleY="0.026"/>
+                            <RotateTransform Angle="0.093"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
+                    <Image Source="/assets/Icons/building.png" Stretch="Fill" Height="450" Width="450"/>
+                </Button>
+                <Label Content="Navigate Building" Grid.Column="0" HorizontalAlignment="Center" Margin="0,580,0,0" VerticalAlignment="Top" Height="108" Width="488" FontSize="55" FontFamily="Leelawadee" FontWeight="Bold"/>
+
+                <!-- Check Announcement Button with White Background -->
+                <Rectangle Grid.Column="1" HorizontalAlignment="Center" Height="680" Stroke="#FFE4E4E4" VerticalAlignment="Top" Width="600" RadiusX="50" RadiusY="50" Fill="White"/>
+                <Button Grid.Column="1" VerticalAlignment="Top" Height="680" FontSize="55" Background="{x:Null}" RenderTransformOrigin="0.5,0.5" Click="Button_Click2" Foreground="Black" BorderBrush="{x:Null}">
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="50"/>
+                        </Style>
+                    </Button.Resources>
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleY="0.029"/>
+                            <RotateTransform Angle="0.092"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
+                    <Image Source="/assets/Icons/announcement.png" Stretch="Fill" RenderTransformOrigin="0.23,0.141" Height="512" Width="512"/>
+                </Button>
+                <Label Content="Check Announcement" Grid.Column="1" HorizontalAlignment="Center" Margin="0,580,0,0" VerticalAlignment="Top" Height="108" Width="586" FontSize="55" FontFamily="Leelawadee" FontWeight="Bold"/>
+
+                <!-- Professor's Schedule Button with White Background -->
+                <Rectangle Grid.Column="2" HorizontalAlignment="Center" Height="680" Stroke="#FFE4E4E4" VerticalAlignment="Top" Width="600" RadiusX="50" RadiusY="50" Fill="White"/>
+                <Button Grid.Column="2" VerticalAlignment="Top" Height="680" FontSize="55" Background="{x:Null}" RenderTransformOrigin="0.5,0.5" Click="Button_Click_ProfessorSchedule" Foreground="Black" BorderBrush="{x:Null}">
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="50"/>
+                        </Style>
+                    </Button.Resources>
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform AngleY="0.029"/>
+                            <RotateTransform Angle="0.092"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
+                    <Image Source="/assets/Icons/schedule.png" Stretch="Fill" RenderTransformOrigin="0.23,0.141" Height="512" Width="512"/>
+                </Button>
+                <Label Content="Professor's Schedule" Grid.Column="2" HorizontalAlignment="Center" Margin="0,580,0,0" VerticalAlignment="Top" Height="108" Width="586" FontSize="55" FontFamily="Leelawadee" FontWeight="Bold"/>
+            </Grid>
+            <!--Main Title -->
             <Label Content="What will you be doing today?" HorizontalAlignment="Left" Margin="618,196,0,0" VerticalAlignment="Top" FontSize="50" FontFamily="Dutch801 XBd BT" Foreground="Black"/>
             
         </Grid>
