--- a/Building.xaml
+++ b/Building.xaml
@@ -13,18 +13,58 @@
 
     <Window.Resources>
         <ControlTemplate x:Key="MenuItemTemplate" TargetType="MenuItem">
-            <Border CornerRadius="50" 
-                    Background="{TemplateBinding Background}" 
-                    Width="70" 
-                    Height="70"
-                    Margin="0,10">
+            <Border x:Name="border"
+            CornerRadius="50" 
+            Background="{TemplateBinding Background}" 
+            Width="70" 
+            Height="70"
+            Margin="0,10">
+                <Border.Style>
+                    <Style TargetType="Border">
+                        <Setter Property="Background" Value="#4089FF"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#FF0B5793"/>
+                                <Setter Property="Effect">
+                                    <Setter.Value>
+                                        <DropShadowEffect BlurRadius="2" 
+                                                ShadowDepth="2" 
+                                                Color="#FF0B5793"/>
+                                    </Setter.Value>
+                                </Setter>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Border.Style>
                 <StackPanel HorizontalAlignment="Center" 
-                          VerticalAlignment="Center">
-                    <ContentPresenter ContentSource="Icon" />
+                    VerticalAlignment="Center">
+                    <ContentPresenter x:Name="iconContent" 
+                            ContentSource="Icon">
+                        <ContentPresenter.Style>
+                            <Style TargetType="ContentPresenter">
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Effect">
+                                            <Setter.Value>
+                                                <DropShadowEffect BlurRadius="1" 
+                                                        ShadowDepth="0" 
+                                                        Color="White"/>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </ContentPresenter.Style>
+                    </ContentPresenter>
                     <ContentPresenter ContentSource="Header" 
-                                    HorizontalAlignment="Center" />
+                            HorizontalAlignment="Center"/>
                 </StackPanel>
             </Border>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter TargetName="border" Property="Cursor" Value="Hand"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
         </ControlTemplate>
     </Window.Resources>
 
